--- a/Mobile App/SmartPool/app/src/main/res/values/strings.xml
+++ b/Mobile App/SmartPool/app/src/main/res/values/strings.xml
@@ -5,4 +5,10 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
+    <string name="title_activity_splash">Here we go ...</string>
+    <string name="title_activity_login">LoginActivity</string>
+    <string name="title_activity_signup">SignupActivity</string>
+    <string name="title_activity_join">JoinActivity</string>
+    <string name="title_activity_offer">OfferActivity</string>
+    <string name="title_activity_list_routes">ListRoutesActivity</string>
 </resources>
